# kl

./: CMakeLists.txt  compile.ps1  grammar.txt
examples/: simple.kl
src/: CMakeLists.txt  codegen.cpp  codegen.hpp  error.hpp  lex.cpp  lex.hpp  main.cpp  parse.cpp  parse.hpp  parse_node.cpp  pipeline.hpp  typecheck.cpp  typecheck.hpp  types.cpp  types.hpp
test/: CMakeLists.txt  lex_test.cpp  parse_test.cpp  test_codegen.cpp  test_pipeline.cpp
